# aaos

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: code.yml
src/: allocator.rs  clock.rs  idt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  pic.rs  pretty.rs  serial.rs  sys.rs  time.rs  vga.rs  vga_buffer.rs
src/sys/: allocator.rs  clock.rs  gdt.rs  idt.rs  keyboard.rs  memory.rs  pic.rs  serial.rs  time.rs  vga.rs
src/sys/clock/: cmos.rs
src/sys/vga/: font.rs
tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
