[package]
name = "aaos"
version = "0.1.0"
edition = "2021"

[profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pc-keyboard = "0.5.1"
pic8259 = "0.10.2"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
spin = "0.9.3"
uart_16550 = "0.2.18"
volatile = "0.4.5"
x86_64 = "0.14.9"
